...
                        app:counterEnabled="true"
                        app:counterMaxLength="50"
                        app:counterTextAppearance="@style/InputTextLayoutCounterStyle"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="16dp"
                            android:drawableStart="@drawable/ic_info_black_24dp"
                            android:drawableTint="@color/colorPrimaryText"
                            android:inputType="text"
...
