...
    <string name="default_rate_plus">0</string>
    <string name="default_rate_minus">0</string>
    <!--details end-->

    <!--add question-->
    <string name="tint_question_text">Описание</string>
    <string name="wrong_title">Серийный номер не указан</string>
    <string name="require_permission">Нет разрешений на запись фотографий</string>
    <string name="question">Вопрос</string>
    <string name="question_exist">Вопрос с таким названием уже есть</string>
    <string name="error">Ошибка</string>
    <string name="something_wrong">Что-то пошло не так</string>
    <string name="unable_to_open_camera">Не можем запустить камеру</string>
...
